<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bus"
        android:icon="@drawable/ic_directions_bus_black_24dp"
        android:title="@string/title_bus" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_transform_black_24dp"
        android:title="@string/title_transfer" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

      <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorites" />


    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_activity_setting" />


</menu>
